--- a/AdvancedLanguage/AdvancedLanguage.vcxproj
+++ b/AdvancedLanguage/AdvancedLanguage.vcxproj
@@ -139,7 +139,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AdvancedLanguage.cpp" />
+    <ClCompile Include="AL1013.cpp" />
+    <ClCompile Include="AL1014.cpp" />
+    <ClCompile Include="AL1015.cpp" />
+    <ClCompile Include="AL1016.cpp" />
+    <ClCompile Include="AL1017.cpp" />
+    <ClCompile Include="AL1018.cpp" />
+    <ClCompile Include="AL1019.cpp" />
+    <ClCompile Include="mainTest.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="base.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
